--- a/css/home.css
+++ b/css/home.css
@@ -12,6 +12,9 @@
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  background-image: url('/assets/towson/towson_1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .home-title {
@@ -25,6 +28,9 @@
 
 .home-description {
   margin-inline: 20px;
+  backdrop-filter: blur(10px);
+  padding: 20px;
+  border-radius: 20px;
 }
 
 #title-one {
@@ -84,15 +90,6 @@
 }
 
 @media only screen and (min-width: 920px) and (max-width: 1100px) {
-  #orange-slice-1 {
-    width: 150px;
-    bottom: 34%;
-  }
-
-  #orange-slice-2 {
-    width: 250px;
-  }
-
   #title-one {
     font-size: 48px;
   }
@@ -102,38 +99,22 @@
 }
 
 @media (max-device-width: 920px) {
-  #orange-slice-1 {
-    display: none;
-  }
-
-  #orange-slice-2 {
-    display: none;
-  }
-
   #title-one {
-    font-size: 40px;
+    font-size: 50px;
     margin-right: 2px;
   }
   #title-two {
-    font-size: 40px;
+    font-size: 50px;
   }
 }
 
 @media (max-width: 700px) {
-  #orange-slice-1 {
-    display: none;
-  }
-
-  #orange-slice-2 {
-    display: none;
-  }
-
   #title-one {
-    font-size: 24px;
+    font-size: 36px;
     margin-right: 2px;
   }
   #title-two {
-    font-size: 24px;
+    font-size: 36px;
   }
 
   .home-description {
